= CHANGELOG

== Roadmap - 0.3

// tag::changelog[]
=== Features
* https://github.com/ysb33r/grolifant/issues/5[#8] - Provides `AbstractToolExecTask`, ``ResolvedExecutable`
* New `ClosureUtils` class to help dealing with common Closure use cases in Gradle plugins such as configuration.
* New `MapUtils` class to help dealing with property maps such as lazy evaluation of values.

// end::changelog[]

== 0.2

=== Features
* https://github.com/ysb33r/grolifant/issues/5[#5] - Operating system methods and properties

=== Other
* https://github.com/ysb33r/grolifant/issues/1[#1] - `CompatibilityInstallerSpec` is failing under Windows.
* https://github.com/ysb33r/grolifant/issues/2[#2] - `gradleTest` is failing under Travis CI after a number of tests.
* https://github.com/ysb33r/grolifant/issues/3[#3] - `gradleTest` runs out of Permgen space on Appveyor.
* https://github.com/ysb33r/grolifant/issues/1[#6] - Support for Gradle 3.3, 3.4, 3.5.

== 0.1

* Distribution Installer base class.
* `StringUtils.stringize` - convert object or closure to a string.
* `UriUtils.urize` - convert object or closure to a URI.