@@ -9,8 +9,7 @@ before_script:
 script:
  - ./gradlew -S -i --console=plain assemble
  - ./gradlew -S -i --console=plain test
- - ./gradlew -S -i --console=plain gradleTest -DgradleTest.versions=2.0,2.3,2.5
- - ./gradlew -S -i --console=plain gradleTest -DgradleTest.versions=2.7,2.8,2.9
+ - ./gradlew -S -i --console=plain gradleTest -DgradleTest.versions=2.8,2.9
  - ./gradlew -S -i --console=plain gradleTest -DgradleTest.versions=2.10,2.12,2.14.1
  - ./gradlew -S -i --console=plain gradleTest -DgradleTest.versions=3.0,3.1,3.2.1
  - ./gradlew -S -i --console=plain gradleTest -DgradleTest.versions=3.3,3.4,3.5
