@@ -8,7 +8,7 @@ build_script:
 
 test_script:
   - gradlew.bat test --info --no-daemon
-  - gradlew.bat gradleTest --info --no-daemon -DgradleTest.versions=2.0,2.1,2.2,2.3,2.4,2.5,2.6,2.7,2.8,2.9
+  - gradlew.bat gradleTest --info --no-daemon -DgradleTest.versions=2.8,2.9
   - gradlew.bat gradleTest --info --no-daemon -DgradleTest.versions=2.10,2.11,2.12,2.13,2.14.1
   - gradlew.bat gradleTest --info --no-daemon -DgradleTest.versions=3.0,3.1,3.2.1,3.3,3.4,3.5
 
