@@ -103,8 +103,6 @@ test {
 gradleTest {
     // **IMPORTANT** When adding versions also update .travel.yml & appveyor.yml
     // tag::gradleTestVersions[]
-    versions '2.0','2.1','2.2','2.3','2.4'
-    versions '2.5', '2.6', '2.7'
     versions '2.8', '2.9', '2.10', '2.11'
     versions '2.12', '2.13', '2.14.1'
     versions '3.0', '3.1', '3.2.1', '3.3', '3.4', '3.5'
